crates/parser/src/snapshots/parser__tests__parse_inline_err@0078_cases_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatype-cases a {}\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0078_cases_empty.ath
---
CASES_DED
  DATATYPE_CASES_KW "datatype-cases"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "a"
  WHITESPACE " "
  L_CURLY "{"
  R_CURLY "}"
  WHITESPACE "\n"
error 18: expected at least one case in datatype-cases

