crates/parser/src/snapshots/parser__tests__parse_inline_err@0079_module_no_rbrace.ath.snap
---
source: crates/parser/src/tests.rs
description: "module foo {\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0079_module_no_rbrace.ath
---
INFIX_MODULE_DIR
  MODULE_KW "module"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE "\n"
error 12: expected R_CURLY

