crates/parser/src/snapshots/parser__tests__parse_inline_err@0081_define_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "define foo :=\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0081_define_empty.ath
---
INFIX_DEFINE_DIR
  DEFINE_KW "define"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE "\n"
error 13: expected definition value

