crates/parser/src/snapshots/parser__tests__parse_inline_err@0083_domains_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "domains\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0083_domains_empty.ath
---
DOMAINS_DIR
  DOMAINS_KW "domains"
  WHITESPACE "\n"
error 7: expected at least one sort declaration in domains directive

