crates/parser/src/snapshots/parser__tests__parse_inline_err@0084_domain_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0084_domain_empty.ath
---
DOMAIN_DIR
  DOMAIN_KW "domain"
  WHITESPACE "\n"
error 6: expected domain sort declaration

