crates/parser/src/snapshots/parser__tests__parse_inline_err@0086_define_proc_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "define (foo) :=\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0086_define_proc_empty.ath
---
DEFINE_PROC_DIR
  DEFINE_KW "define"
  WHITESPACE " "
  L_PAREN "("
  IDENTIFIER
    IDENT "foo"
  R_PAREN ")"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE "\n"
error 15: expected procedure body

