crates/parser/src/snapshots/parser__tests__parse_inline_err@0087_define_proc_no_rparen.ath.snap
---
source: crates/parser/src/tests.rs
description: "define (foo := lambda () true\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0087_define_proc_no_rparen.ath
---
INFIX_DEFINE_DIR
  DEFINE_KW "define"
  WHITESPACE " "
  DEFINE_PROC
    L_PAREN "("
    IDENTIFIER
      IDENT "foo"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  EXPR_PHRASE
    LAMBDA_EXPR
      LAMBDA_KW "lambda"
      WHITESPACE " "
      L_PAREN "("
      R_PAREN ")"
      WHITESPACE " "
      IDENT_EXPR
        IDENTIFIER
          IDENT "true"
  WHITESPACE "\n"
error 11: expected R_PAREN

