crates/parser/src/snapshots/parser__tests__parse_inline_err@0088_phrase_stmt_err.ath.snap
---
source: crates/parser/src/tests.rs
description: "(! )\n"
input_file: crates/parser/test_data/parser/inline/err/stmt/0088_phrase_stmt_err.ath
---
PHRASE_STMT
  DED_PHRASE
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      WHITESPACE " "
      R_PAREN ")"
      WHITESPACE "\n"
error 3: expected method expression to apply

