crates/parser/src/snapshots/parser__tests__parse_inline_err@0089_dir_stmt_err.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain\n"
input_file: crates/parser/test_data/parser/inline/err/stmt/0089_dir_stmt_err.ath
---
DIR_STMT
  DOMAIN_DIR
    DOMAIN_KW "domain"
    WHITESPACE "\n"
error 7: expected domain sort declaration

